# wems-mcp-server

./: .gitignore  AI.CONTEXT.md  AI.INDEX  AI.REGISTER  AI.TOC  CHANGELOG.md  CONTRIBUTING.md  CREATE-RELEASE.sh  Dockerfile  LICENSE  MONETIZATION-SPRINT-SUMMARY.md  PUBLISH-STATUS.md  README.md  REGISTRY-PUBLISHING-STATUS.md  RELEASE-NOTES-v1.0.0.md  config.example.yaml  mcp-registry.json  package.json  pyproject.toml  requirements.txt  server.json  setup.py  wems-mcp-server.ai.index  wems-mcp-server.ai.register  wems-mcp-server.ai.toc  wems.ai.index  wems.ai.register  wems.ai.toc  wems_mcp_server.ai.context  wems_mcp_server.ai.index  wems_mcp_server.ai.register  wems_mcp_server.ai.toc  wems_mcp_server.py
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  publish.yml
build-env/: pyvenv.cfg
docs/: index.html
test-env/: pyvenv.cfg
tests/: conftest.py  test_air_quality.py  test_configure_alerts.py  test_drought_status.py  test_earthquakes.py  test_floods.py  test_hurricanes.py  test_server.py  test_severe_weather.py  test_solar.py  test_space_weather_alerts.py  test_threat_advisories.py  test_tsunamis.py  test_volcanoes.py  test_wildfires.py
