[build-system]
requires = ["setuptools>=61.0,<72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wems-mcp-server"
version = "1.5.2"
authors = [
    {name = "Helios", email = "heliosarchitectlbf@gmail.com"}
]
description = "World Event Monitoring System - MCP server for natural hazard monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
keywords = [
    "mcp", 
    "model-context-protocol", 
    "natural-disasters", 
    "earthquake", 
    "tsunami", 
    "volcano", 
    "solar-weather", 
    "monitoring", 
    "alerts", 
    "webhooks", 
    "usgs", 
    "noaa", 
    "ai", 
    "automation",
    "emergency-management",
    "real-time-data"
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0", 
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "aiohttp>=3.8.0",
    "python-dateutil>=2.8.0"
]

[project.urls]
Homepage = "https://github.com/heliosarchitect/wems-mcp-server"
Documentation = "https://github.com/heliosarchitect/wems-mcp-server#readme"
Repository = "https://github.com/heliosarchitect/wems-mcp-server"
"Bug Reports" = "https://github.com/heliosarchitect/wems-mcp-server/issues"

[project.scripts]
wems = "wems_mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[tool.setuptools]
py-modules = ["wems_mcp_server"]

[tool.setuptools.packages.find]
where = ["."]
include = ["wems*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.md", "*.txt", "*.json"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mcp]
mcpName = "io.github.heliosarchitect/wems"